--- a/src/client/components/room/interest/style.scss
+++ b/src/client/components/room/interest/style.scss
@@ -1,3 +1,14 @@
 .interest {
-	display: inline-block;
+	display: flex;
+	justify-content: space-around;
+	width: 330px;
+}
+
+.moodLabel {
+	margin-left: 10px;
+}
+
+.moodWrapper {
+	display: flex;
+	align-items: center;
 }
