--- a/src/client/components/room/style.scss
+++ b/src/client/components/room/style.scss
@@ -1,4 +1,10 @@
 .inputWrapper{
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	font-size: 40px;
+}
+
+h1 {
+	text-align: center;
 }
