Styled share to Telegram/WhatsApp button

--- a/src/client/style.scss
+++ b/src/client/style.scss
@@ -3,7 +3,7 @@ $primary-color: #ffc107;
 html, body {
   background-color: white;
   min-width: 700px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik', sans-serif;;
 
 }
 body{
