--- a/src/client/components/room/option/style.scss
+++ b/src/client/components/room/option/style.scss
@@ -4,9 +4,11 @@
 }
 
 .optionInput {
+	width: 450px;
 	border-radius: 3px;
 	border: 4px solid #ffd54f;
 	padding: 10px;
 	font-size: 30px;
-	margin: 15px;
+	margin: 15px auto;
+	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
 }
