--- a/src/client/components/room/style.scss
+++ b/src/client/components/room/style.scss
@@ -2,8 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	font-size: 40px;
-}
+	font-size: 40px;}
 
 h1 {
 	text-align: center;
