--- a/src/client/components/room/addanother/style.scss
+++ b/src/client/components/room/addanother/style.scss
@@ -1,10 +1,10 @@
 i {
-	color: green;
+	color: #4caf50;
 	font-size: 42px !important;
 }
 
 i:hover {
-	color: darkgreen;
+	color: #43a047;
 }
 
 .add {
