--- a/src/client/components/room/interest/style.scss
+++ b/src/client/components/room/interest/style.scss
@@ -2,8 +2,9 @@
 	display: flex;
 	justify-content: space-around;
 	width: 270px;
+	line-height: 1px;
 }
 
 .moodLabel {
-	margin-left: 10px;
+	margin-left: 7px;
 }
