--- a/src/client/components/room/option/style.scss
+++ b/src/client/components/room/option/style.scss
@@ -6,7 +6,7 @@
 .optionInput {
 	width: 450px;
 	border-radius: 3px;
-	border: 4px solid #ffd54f;
+	border: 4px solid #ff5722;
 	padding: 10px;
 	font-size: 30px;
 	margin: 15px auto;
