--- a/src/client/components/vote/displayother/style.scss
+++ b/src/client/components/vote/displayother/style.scss
@@ -1,9 +1,13 @@
 .optionWrapper {
-	width: 500px;
-	padding: 10px;
-	background-color: lightblue;
-	margin: 10px;
+	margin: 10px 250px;
+	padding: 10px 30px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	border-radius: 7px;
+	font-size: 35px;
+	background-color: #ff5722;
+	border: 3px solid #ff5722;
+	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
+	line-height: 70px;
 }
