--- a/src/client/components/general/topic/style.scss
+++ b/src/client/components/general/topic/style.scss
@@ -1,14 +1,14 @@
 @import '../../../styles/colors';
 
-h1 {
-	font-size: 50px;
-	margin: 10px auto;
-}
-
 .topicWrapper {
 	height: 170px;
 	background-color: $primary-color;
 	display: flex;
 	align-items: center;
 	box-shadow: 1px 1px 2.5px 1px #cccccc;
+		h1 {
+		font-size: 50px;
+		margin: 30px auto;
+		text-align: center;
+	}
 }
