--- a/src/client/components/index/style.scss
+++ b/src/client/components/index/style.scss
@@ -1,14 +1,16 @@
 @import '../../styles/colors';
 
-h1 {
-	font-size: 37px;
-	margin: 0;
-}
-
 .mainWrapper {
-	height: 240px;
+	margin: 0;
+	height: 170px;
 	background-color: $danger-color;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	box-shadow: 1px 1px 2.5px 1px #cccccc;
 }
+
+	h1 {
+		font-size: 60px;
+		text-align: center;
+	}
