--- a/src/client/styles/colors.scss
+++ b/src/client/styles/colors.scss
@@ -2,3 +2,4 @@ $primary-color: #ffb300;
 $primary-color-light: #ffd54f;
 $main-bg-color: #ff8f00;
 $danger-color: #ff5722;
+$danger2-color: #d84315;
