--- a/src/client/components/index/form/style.scss
+++ b/src/client/components/index/form/style.scss
@@ -1,21 +1,34 @@
 @import '../../../styles/colors';
 
 .createRoomInput {
-	width: 520px;
+	width: 600px;
 	border-radius: 3px;
 	border: 4px solid $danger-color;
 	padding: 10px;
-	font-size: 35px;
+	font-size: 33px;
 	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
 	display: inline;
 }
 
 .rootWrapper {
+	max-width: 960px;
 	margin: 40px auto;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 .createRoomButton {
+	background-color: $danger-color;
+	color: #FFFFFF;
+	margin: 29px;
 	display: inline;
+	font-size: 25px;
+	padding: 12px 32px;
+	border-radius: 8px;
+	box-shadow: 0.5px 0.5px 2px 0.5px #cccccc;
+}
+
+.createRoomButton:hover {
+	background-color: $danger2-color;
 }
