--- a/src/client/components/room/style.scss
+++ b/src/client/components/room/style.scss
@@ -3,6 +3,8 @@
 	flex-direction: column;
 	align-items: center;
 	font-size: 40px;
+	max-width: 960px;
+	margin: 1px auto;
 }
 
 h1 {
@@ -12,4 +14,11 @@ h1 {
 .optionsBelowTextInput {
 	display: flex;
 	align-items: center;
+}
+
+.shareNextButton {
+	margin: 20px auto;
+	max-width: 960px;
+	display: flex;
+	justify-content: space-between;
 }
