--- a/src/client/components/room/displayoption/style.scss
+++ b/src/client/components/room/displayoption/style.scss
@@ -3,7 +3,7 @@
 .displayWrapper {
 	margin-top: 50px;
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
 }
 
 .optionCard {
