--- a/src/client/components/index/form/style.scss
+++ b/src/client/components/index/form/style.scss
@@ -1,13 +1,14 @@
 @import '../../../styles/colors';
 
 .createRoomInput {
-	width: 600px;
+	width: 620px;
 	border-radius: 3px;
 	border: 4px solid $danger-color;
 	padding: 10px;
-	font-size: 33px;
+	font-size: 30px;
 	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
 	display: inline;
+	margin: 10px auto;
 }
 
 .rootWrapper {
@@ -15,18 +16,19 @@
 	margin: 40px auto;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-content: center;
 }
 
 .createRoomButton {
 	background-color: $danger-color;
 	color: #FFFFFF;
-	margin: 29px;
-	display: inline;
+	margin: 29px auto;
+
 	font-size: 25px;
 	padding: 12px 32px;
 	border-radius: 8px;
 	box-shadow: 0.5px 0.5px 2px 0.5px #cccccc;
+
 }
 
 .createRoomButton:hover {
