--- a/src/client/styles/colors.scss
+++ b/src/client/styles/colors.scss
@@ -4,3 +4,6 @@ $main-bg-color: #ff8f00;
 $danger-color: #ff5722;
 $danger2-color: #d84315;
 $blue: #03a9f4;
+$blue2: #1e88e5;
+$green: #4caf50;
+$green2: #43a047;
