--- a/src/client/components/result/style.scss
+++ b/src/client/components/result/style.scss
@@ -1,3 +1,5 @@
+@import '../room/submit/style';
+
 .resultWrapper {
 	max-width: 960px;
 	display: flex;
@@ -5,4 +7,11 @@
 	flex-direction: column;
 	margin: 15px auto;
 	padding-right: 25px;
+}
+
+.randomButton {
+	@extend .nextButton;
+	font-size: 30px;
+	padding: 20px 25px;
+	margin: 10px;
 }
