--- a/src/client/components/room/displayoption/style.scss
+++ b/src/client/components/room/displayoption/style.scss
@@ -7,7 +7,8 @@
 }
 
 .optionCard {
-	margin: 10px 250px;
+	width: 700px;
+	margin: 10px auto;
 	padding: 10px 30px;
 	display: flex;
 	flex-direction: row;
@@ -20,6 +21,7 @@
 
 .optionCardText {
 	padding: 10px;
+	font-size: 35px;
 }
 
 .optionCardSymbol {
