--- a/src/client/components/room/submit/style.scss
+++ b/src/client/components/room/submit/style.scss
@@ -1,10 +1,16 @@
+@import '../../../styles/colors';
+
 .nextButton {
 	border-radius: 5px;
 	text-transform: uppercase;
 	font-size: 15px;
 	font-weight: 900;
-	background-color: #03a9f4;
+	background-color: $blue;
 	color: white;
 	padding: 8px 18px;
 	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
+}
+
+.nextButton:hover {
+	background-color: $blue2;
 }
