--- a/src/client/components/vote/style.scss
+++ b/src/client/components/vote/style.scss
@@ -1,6 +1,9 @@
+@import '../../styles/colors';
+@import '../room/submit/style';
+
 .refreshButton {
 	margin: 20px;
-	background-color: #03a9f4;
+	background-color: $green;
 	font-size: 15px;
 	color: white;
 	border-radius: 5px;
@@ -10,6 +13,7 @@
 	align-items: center;
 	text-transform: uppercase;
 	font-weight: 700;
+	margin: 1px auto;
 
 	i {
 		color: white;
@@ -18,10 +22,18 @@
 	}
 }
 
+.refreshButton:hover{
+	background-color: $green2;
+}
+
 
 .nextButtonWrapper {
 	margin: 20px auto;
 	max-width: 960px;
 	display: flex;
 	justify-content: flex-end;
+
+	button {
+		@extend .nextButton;
+	}
 }
