--- a/src/client/components/index/form/style.scss
+++ b/src/client/components/index/form/style.scss
@@ -6,17 +6,18 @@
 	border: 4px solid $danger-color;
 	padding: 10px;
 	font-size: 30px;
-	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
+	box-shadow: 0.5px 0.5px 3px 0.5px #ff8f00;
 	display: inline;
 	margin: 10px auto;
 }
 
 .rootWrapper {
 	max-width: 960px;
-	margin: 40px auto;
+	margin: 0px auto;
 	display: flex;
 	flex-direction: column;
 	align-content: center;
+	padding-bottom: 40px;
 }
 
 .createRoomButton {
@@ -27,7 +28,8 @@
 	font-size: 25px;
 	padding: 12px 32px;
 	border-radius: 8px;
-	box-shadow: 0.5px 0.5px 2px 0.5px #cccccc;
+	border: none;
+	box-shadow: 0.5px 0.5px 1px 0.5px #ff8f00;
 
 }
 
