Changes to copy

--- a/src/client/components/index/description/style.scss
+++ b/src/client/components/index/description/style.scss
@@ -9,6 +9,10 @@
 		margin: 0px auto;
 		padding: 50px;
 	}
+
+	h1 {
+		padding-top: 35px;
+	}
 }
 
 .descText {
@@ -25,5 +29,9 @@
 
 	h1 {
 		padding-top: 35px;
+	}
+
+	.tinyText {
+		font-size: 15px;
 	}
 }
