--- a/src/client/components/index/description/style.scss
+++ b/src/client/components/index/description/style.scss
@@ -5,9 +5,8 @@
 	background-color: $primary-color-light;
 
 	p {
-		width: 760px;
 		margin: 0px auto;
-		padding: 50px;
+		padding: 0px;
 	}
 
 	h1 {
@@ -34,4 +33,8 @@
 	.tinyText {
 		font-size: 15px;
 	}
+}
+
+@media only screen and (max-width: 600px) {
+
 }
