--- a/src/client/components/index/style.scss
+++ b/src/client/components/index/style.scss
@@ -20,3 +20,10 @@
 	padding-top: 100px;
 	background-color: $primary-color;
 }
+
+@media only screen and (max-width: 600px) {
+	h1 {
+		font-size: 30px;
+	}
+
+}
