--- a/src/client/components/room/option/style.scss
+++ b/src/client/components/room/option/style.scss
@@ -4,11 +4,25 @@
 }
 
 .optionInput {
-	width: 450px;
+	width: 100%;
 	border-radius: 3px;
 	border: 4px solid #ff5722;
 	padding: 10px;
 	font-size: 30px;
 	margin: 15px auto;
 	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
+}
+
+@media only screen and (max-width: 600px) {
+
+	.optionInput {
+		width: 90%;
+		border-radius: 3px;
+		border: 4px solid #ff5722;
+		padding: 10px;
+		font-size: 30px;
+		margin: 15px auto;
+		box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
+	}
+
 }
