Made pages mobile responsive

--- a/src/client/components/result/style.scss
+++ b/src/client/components/result/style.scss
@@ -8,3 +8,12 @@
 	margin: 1px auto;
 	padding-right: 25px;
 }
+
+@media only screen and (max-width: 600px) {
+
+ .resultWrapper {
+ 	padding: 10px;
+ }
+
+
+}
