--- a/src/client/components/room/interest/style.scss
+++ b/src/client/components/room/interest/style.scss
@@ -12,7 +12,12 @@
 @media only screen and (max-width: 600px) {
 
 	.interest {
-		width: 200px;
+		width: 100%;
 	}
+
+	.moodLabel {
+		font-size: 23px;
+	}
+
 
 }
