--- a/src/client/components/room/style.scss
+++ b/src/client/components/room/style.scss
@@ -22,3 +22,12 @@ h1 {
 	display: flex;
 	justify-content: space-between;
 }
+
+@media only screen and (max-width: 600px) {
+
+.optionsBelowTextInput {
+	display: flex;
+	align-items: center;
+}
+
+}
