--- a/src/client/components/general/topic/style.scss
+++ b/src/client/components/general/topic/style.scss
@@ -12,3 +12,12 @@
 		text-align: center;
 	}
 }
+
+@media only screen and (max-width: 600px) {
+
+.topicWrapper {
+	h1 {
+		font-size: 30px;
+	}
+}
+}
