--- a/src/client/components/result/barchart/style.scss
+++ b/src/client/components/result/barchart/style.scss
@@ -3,3 +3,12 @@
 	margin: 30px auto;
 	padding-right: 25px;
 }
+
+@media only screen and (max-width: 600px) {
+
+.barChartSize {
+	width: 100%;
+}
+
+
+}
