--- a/src/client/components/result/modalRandom/style.scss
+++ b/src/client/components/result/modalRandom/style.scss
@@ -11,3 +11,15 @@
 	font-size: 30px;
 	text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+
+.randomOption {
+	font-size: 30px;
+	text-align: center;
+}
+
+	.paper {
+		width: 300px !important;
+	}
+}
