--- a/src/client/components/room/submit/style.scss
+++ b/src/client/components/room/submit/style.scss
@@ -9,6 +9,8 @@
 	color: white;
 	padding: 8px 18px;
 	box-shadow: 0.5px 0.5px 3px 0.5px #cccccc;
+	margin: 5px;
+	border: none;
 }
 
 .nextButton:hover {
